--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -81,9 +81,10 @@
           </div>
           <button type="submit" class="btn btn-warning mcButton">Submit</button>
         </form>
-        <a name="portfolioPosition"></a>
       </footer>
     </div>
   </div>
+  <br><br><br><a name="portfolioPosition"></a>
+
   {{!-- Container Closes --}}
 </div>
