--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 	<script src="/assets/js/burgers.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
 		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Roboto|Ubuntu" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Roboto|Ubuntu|Lato|Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 
 
